--- a/user.html
+++ b/user.html
@@ -51,12 +51,12 @@
         <div class="overlay">
             <div class="text-image">
                 <div class="text">
-                    <h4 style="color: #73AD21">At your comfort zone,</h4>
+                    <h4>At your comfort zone,</h4>
                     <h1>Get your goods</h1>
                     <h1>Delivered</h1>
                 </div>
                 <div class="img">
-                    <img src="./assets/girls.png" style="width: 600px; height: 250px">
+                    <img src="./assets/girls.png">
                 </div>
             </div>
         </div>
@@ -70,7 +70,7 @@
     </section>
     
     <section class="stage-container">
-       <div class="container">
+       <!-- <div class="container">
             <div class="stage">
                 <h2 class="to-do">Step1</h2>
                 <div class="step">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate, nisi perferendis. Fuga tempore quibusdam enim nihil provident unde harum aliquam.</div>
@@ -83,7 +83,7 @@
                 <h2 class="to-do">Step3</h2>
                 <div class="step">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae pariatur officia sint aliquid! Maxime quibusdam deserunt cum dolore ipsum. Totam.</div>
             </div>
-       </div>
+       </div> -->
         <form action="#" id="userForm">
     
             <div class="inputBox">
