responsiveness on th sign up form

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog-Home</title>
+    <title>WakaWell</title>
     <!-- CSS LINK -->
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="responsiveness.css">
@@ -31,7 +31,7 @@
       <ul>
         <li class="menu"><a href="index.html">Home</a></li>
         <li class="menu"><a href="user.html">User</a></li>
-        <li class="menu"><a href="#">software</a></li>
+        <li class="menu"><a href="#">Dispatcher</a></li>
         <li><a href="sign-up.html" class="demo">Create account</a></li>
         <li><a href="#"  class="login" onclick="toggleHandler()">Login</a></li>
       </ul>
