--- a/index.html
+++ b/index.html
@@ -40,19 +40,23 @@
 
 
   <!-- FORM -->
-  <div class="form" id="form">
-    <div class="login-exit_icon" onclick="toggleHandler()" ><i class="fa fa-times-circle-o" aria-hidden="true"></i></div>
-    <input type="email" name="email" placeholder="Enter Username">
-    <input type="password" name="" placeholder="Enter Password">
-    <button class="btnn" id="try" type="submit" onclick="toggleHandler()"><a href="#">Login</a></button>
-    <div class="login_sign-up">
-      <p class="link" style="padding-top: 12px;">Don't have an account<br>
-        <a href="sign-up.html" style="padding-top: 12px;">Sign up </a> here</a>
-      </p>
-      <p class="liw">Log in with</p>
-    </div>
-    
-  </div> 
+  <form onsubmit="setTimeout(function(){window.location.reload();},0);">
+    <div class="form" id="form">
+      <div class="login-exit_icon" onclick="toggleHandler()" ><i class="fa fa-times-circle-o" aria-hidden="true"></i></div>
+      <input type="email" name="email" placeholder="Enter Username">
+      <input type="password" name="" placeholder="Enter Password" i class="fa fa-eye" aria-hidden="true" id="myInput">
+      <i class="fa fa-eye" onclick="myPassword()"aria-hidden="true" style="color:#73AD21;cursor:pointer"></i>
+      <button class="btnn" id="try" type="submit" onclick="toggleHandler()"><a href="#">Login</a></button>
+      <div class="login_sign-up">
+        <p class="link" style="padding-top: 12px;">Don't have an account<br>
+          <a href="sign-up.html" style="padding-top: 12px;">Sign up </a> here</a>
+        </p>
+        <p class="liw">Log in with</p>
+      </div>
+      
+    </div> 
+  </form>
+ 
 
   <section>
     <div class="overlay">
